--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name: disburden
-disqus_show_comment_count: true
+disqus_show_comment_count: false
 
 # Google Analytics
 google_analytics_tracking_id:
@@ -97,3 +97,5 @@ google_analytics_tracking_id:
 # Facebook Like
 facebook_like: false
 
+# weibo
+weibo_share: true
