--- a/_config.yml
+++ b/_config.yml
@@ -88,8 +88,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: disburden
-disqus_show_comment_count: false
+#disqus_short_name: disburden
+#disqus_show_comment_count: false
 
 # Google Analytics
 google_analytics_tracking_id:
